--- a/backend/frontend/style.css
+++ b/backend/frontend/style.css
@@ -14,7 +14,7 @@ header {
 a {
     font-size: 15px;
     text-decoration: none;
-    color: aliceblue;
+    color: burlywood;
     padding: 20px;
 }
 
